# upload_python3_package

./: pyproject.toml
src/: arithmetic.py
src/arithmetic_tomxr00se/: arithmetic.py
