[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arithmetic_tomxr00se"
version = "0.0.4"
authors = [
  { name="Prem Kumar", email="kumar8777prem@gmail.com" },
]
description = "A minimal package to do basic arithmetic"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wicked-smart/upload_python3_package"

